# pcap2PCD

./: CMakeLists.txt  README.md
include/utils/: argparse.hpp
include/velodyne/: LidarConfig.hpp  PcapReader.hpp  PointCloudReader.hpp
resource/: autoCalibMatrix.txt  parameters.txt~
src/: Pcap2PCD.cpp
